--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,21 @@
       "name": "nicodmf"
     }
   ],
+  "repositories": [
+      {
+        "type": "package",
+        "package": {
+            "name": "foxp2/highlight-bundle",
+            "version": "dev-master",
+            "source": {
+                "url": "https://github.com/foxp2/HighlightBundle",
+                "type": "git",
+                "reference": "origin/master"
+            },
+            "target-dir": "Highlight"
+        }
+        }
+  ],
   "require": {
     "php":               ">=5.3.2",
     "symfony/symfony":   "2.3.*",
